<resources>
    <string name="app_name">FindHP</string>

    <!-- Map activity -->
    <string name="title_activity_maps">FindHP</string>
    <string name="title_permission_not_granted">Location permission is not granted</string>
    <string name="msg_permission_not_granted">Please grant location permission for getting the best places around you!</string>
    <string name="msg_can_not_listen_update_changes">Can not listen to your location\'s changes.</string>
    <string name="msg_target_location_is_not_far">This target is near old one. Please choose further one</string>
    <string name="hint_search_target_location">Search target location</string>
    <string name="text_clear_search">clear search text</string>


    <!-- Map Activity menu -->
    <string name="title_find_dentist">Find dentists</string>
    <string name="title_find_doctor">Find doctors</string>
    <string name="title_find_gym">Find gyms</string>
    <string name="title_find_hospital">Find hospitals</string>
    <string name="title_find_pharmacy">Find pharmacies</string>
    <string name="title_find_spa">Find spa</string>
    <string name="title_view_saved_places">View saved places</string>

    <string name="radius_hint">500</string>
    <string name="top_background_text_view">I want to find nearby medical center\n within</string>
    <string name="find_button_text">Find now!</string>
    <string name="rating">Rating:</string>
    <string name="no_cafe_text">No  is found :(</string>
    <string name="duration">%1$s driving</string>
    <string name="contact">Contact</string>
    <string name="photos">Photos</string>
    <string name="working_days">Working days</string>
    <string name="review">Reviews</string>
    <string name="action_settings">Settings</string>
    <string name="change_mode">Change to %1$s mode</string>
    <string name="price_level">Price Level</string>
    <string name="rating_index">(%1$s)</string>
    <string name="review_text">"%1$s"</string>
</resources>
